tests/snapshots/parser_error_fixtures/MultiImportKeywordErrors.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/MultiImportKeywordErrors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Import Path

This import needs a module path after `import`.

  examples/parser_errors/MultiImportKeywordErrors.flx:2:5
  |
2 |     import
  |     ^^^^^^

Hint:
  Import statements use `import Module.Name`.

Note:
  while parsing module `MultiImportKeywordErrors`


error[E034]: Missing Import Alias

This import alias needs a name after `as`.

  examples/parser_errors/MultiImportKeywordErrors.flx:3:17
  |
3 |     import Demo as
  |                 ^^

Hint:
  Import aliases use `import Module as Alias`.

Note:
  while parsing module `MultiImportKeywordErrors`


error[E034]: Missing Import Except List

Expected `[` after `except` in import.

  examples/parser_errors/MultiImportKeywordErrors.flx:4:27
  |
4 |     import Foo.Bar except x, y ]
  |                           ^

Hint:
  Import exclusions use `import Module except [Name1, Name2]`.

Note:
  while parsing module `MultiImportKeywordErrors`


error[E030]: Unknown Keyword

Unknown keyword `def`. Flux uses `fn` for function declarations.

  examples/parser_errors/MultiImportKeywordErrors.flx:6:5
  |
6 |     def greet(name) { name }
  |     ^^^

Hint:
  Did you mean `fn`?

Note:
  while parsing module `MultiImportKeywordErrors`


error[E034]: Missing Hash Colon

This hash entry needs `:` between the key and value.

  examples/parser_errors/MultiImportKeywordErrors.flx:6:28
  |
6 |     def greet(name) { name }
  |                            ^

Hint:
  Hash literals use `{key: value, ...}`.

Note:
  while parsing module `MultiImportKeywordErrors`


error[E030]: Unknown Keyword

Unknown keyword `var`. Flux uses `let` for bindings.

  examples/parser_errors/MultiImportKeywordErrors.flx:7:5
  |
7 |     var count = 1
  |     ^^^

Hint:
  Did you mean `let`?

Note:
  while parsing module `MultiImportKeywordErrors`


error[E034]: Unexpected Token

`end` is not a keyword in Flux. Use `}` to close blocks.

  examples/parser_errors/MultiImportKeywordErrors.flx:9:5
  |
9 |     end
  |     ^^^

Hint:
  Replace `end` with `}`.

Found 7 errors.
== stdout ==
<not executed>
