tests/snapshots/parser_error_fixtures/eof_after_match_open.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/eof_after_match_open.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Match Body

Expected at least one match arm before end of file.

  examples/parser_errors/eof_after_match_open.flx:2:25
  |
2 |     let value = match 1 {
  |                         ^
  |                         - this match expression starts here

Note:
  while parsing function `main` > `match` expression

Help:
  Write match arms as `match value { pattern -> body, ... }`.
== stdout ==
<not executed>
