tests/snapshots/parser_error_fixtures/exposing_missing_close_paren.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/exposing_missing_close_paren.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Invalid Exposing List

Expected `,` or `)` in exposing list, but found `fn`.

  examples/parser_errors/exposing_missing_close_paren.flx:3:1
  |
3 | fn main() {}
  | ^^

Hint:
  Use `exposing (name1, name2)` for selective imports.
== stdout ==
<not executed>
